<resources>
    <string name="app_name">CatChat</string>
    <string name="user_name">spot@catchat.com</string>

    <string name="nav_inbox">Messages</string>
    <string name="nav_drafts">Drafts</string>
    <string name="nav_sent">Sent messages</string>
    <string name="nav_trash">In da trash</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Giv us feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
</resources>