<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/baseline_email_black_18dp"
            android:title="@string/nav_inbox"
            android:checked="true"/>

        <item
            android:id="@+id/nav_drafts"
            android:icon="@drawable/baseline_edit_black_18dp"
            android:title="@string/nav_drafts"/>

        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/baseline_send_black_18dp"
            android:title="@string/nav_sent"/>

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/baseline_delete_black_18dp"
            android:title="@string/nav_trash"/>
    </group>


    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/baseline_help_black_18dp"
                android:title="@string/nav_help"/>

            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/baseline_email_black_18dp"
                android:title="@string/nav_feedback"/>
        </menu>
    </item>
</menu>